# appreciate

./: .gitignore  .gitmodules  Makefile  README.md  docker-compose.yml
aggregator/: Dockerfile  pyproject.toml
aggregator/proto/: aggregator.proto  aggregator_pb2.py  aggregator_pb2_grpc.py
aggregator/scripts/: entrypoint.sh  protoc.sh
client/: .eslintrc.js  .pretterrc.js  Dockerfile  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml
client/api/: client.ts
client/src/api/: index.ts
client/src/types/: api.ts  auth.ts
client/types/: api.ts  auth.ts  user.ts
events/: Dockerfile  pyproject.toml
events/proto/: events.proto
events/src/app/: main.py
gateway/: Dockerfile  go.mod  main.go
publisher/: README.md  pyproject.toml
publisher/proto/: publisher.proto  publisher_pb2.py  publisher_pb2.pyi  publisher_pb2_grpc.py
publisher/scripts/: protoc.sh
publisher/src/: server.py
publisher/src/app/: main.py
rss/: Dockerfile  pyproject.toml
rss/proto/: rss.proto  rss_pb2.pyi  rss_pb2_grpc.py
rss/scripts/: protoc.sh
rss/src/: server.py
rss/src/core/: service.py
rss/src/proto/: __init__.py  rss_pb2.py
users/: go.mod  main.go
users/protos/: users.proto
venues/: pyproject.toml
venues/protos/: venues.proto
